Assets Window (inacabado)

--- a/MyGameMaker/MyGameEditor/imgui.ini
+++ b/MyGameMaker/MyGameEditor/imgui.ini
@@ -58,3 +58,13 @@ Pos=19,364
 Size=122,100
 Collapsed=0
 
+[Window][Assets Folder]
+Pos=5,505
+Size=190,212
+Collapsed=0
+
+[Window][Main Viewport]
+Pos=8,275
+Size=264,201
+Collapsed=0
+
