--- a/MyGameMaker/MyGameEditor/MyGameEditor.vcxproj
+++ b/MyGameMaker/MyGameEditor/MyGameEditor.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="BasicShapesManager.cpp" />
     <ClCompile Include="Console.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MeshImporter.cpp" />
     <ClCompile Include="MyGui.cpp" />
     <ClCompile Include="MyWindow.cpp" />
     <ClCompile Include="SceneManager.cpp" />
@@ -151,6 +152,7 @@
   <ItemGroup>
     <ClInclude Include="BasicShapesManager.h" />
     <ClInclude Include="Console.h" />
+    <ClInclude Include="MeshImporter.h" />
     <ClInclude Include="MyGui.h" />
     <ClInclude Include="MyWindow.h" />
     <ClInclude Include="SceneManager.h" />
