--- a/MyGameMaker/MyGameEditor/MyGameEditor.vcxproj.filters
+++ b/MyGameMaker/MyGameEditor/MyGameEditor.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="SystemInfo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MeshImporter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyWindow.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SystemInfo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshImporter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
