--- a/MyGameMaker/MyGameEngine/MyGameEngine.vcxproj
+++ b/MyGameMaker/MyGameEngine/MyGameEngine.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="Image.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="readOnlyView.h" />
+    <ClInclude Include="SceneSerializer.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureImporter.h" />
     <ClInclude Include="Transform.h" />
@@ -149,6 +150,7 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="SceneSerializer.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureImporter.cpp" />
     <ClCompile Include="Transform.cpp" />
