Improving some UI

--- a/MyGameMaker/MyGameEditor/imgui.ini
+++ b/MyGameMaker/MyGameEditor/imgui.ini
@@ -59,12 +59,17 @@ Size=122,100
 Collapsed=0
 
 [Window][Assets Folder]
-Pos=5,505
-Size=266,212
+Pos=300,520
+Size=680,200
 Collapsed=0
 
 [Window][Main Viewport]
 Pos=1254,689
 Size=32,32
+Collapsed=0
+
+[Window][Main Window]
+Pos=300,495
+Size=180,55
 Collapsed=0
 
