--- a/MyGameMaker/MyGameEngine/MyGameEngine.vcxproj
+++ b/MyGameMaker/MyGameEngine/MyGameEngine.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="Component.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Image.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="readOnlyView.h" />
     <ClInclude Include="Texture.h" />
