--- a/MyGameMaker/MyGameEngine/MyGameEngine.vcxproj.filters
+++ b/MyGameMaker/MyGameEngine/MyGameEngine.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="TextureImporter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Material.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Transform.cpp">
