--- a/MyGameMaker/MyGameEditor/MyGameEditor.vcxproj
+++ b/MyGameMaker/MyGameEditor/MyGameEditor.vcxproj
@@ -151,6 +151,7 @@
   <ItemGroup>
     <ClInclude Include="BasicShapesManager.h" />
     <ClInclude Include="Console.h" />
+    <ClInclude Include="MeshImporter.h" />
     <ClInclude Include="MyGui.h" />
     <ClInclude Include="MyWindow.h" />
     <ClInclude Include="SceneManager.h" />
