Casi Fixeado(confia)

--- a/MyGameMaker/MyGameEditor/MyGameEditor.vcxproj.filters
+++ b/MyGameMaker/MyGameEditor/MyGameEditor.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="SystemInfo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MeshImporter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyWindow.h">
