--- a/MyGameMaker/MyGameEditor/MyGameEditor.vcxproj
+++ b/MyGameMaker/MyGameEditor/MyGameEditor.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="BasicShapesManager.cpp" />
     <ClCompile Include="Console.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MeshImporter.cpp" />
     <ClCompile Include="MyGui.cpp" />
     <ClCompile Include="MyWindow.cpp" />
     <ClCompile Include="SceneManager.cpp" />
